--- a/pages/templates/pages/page.html
+++ b/pages/templates/pages/page.html
@@ -1,7 +1,18 @@
 {% extends 'base.html' %}
+{% block title %}{{ title }}{% endblock title%}
+{% block sidenav %}
 
+    {% for page in page_list %}
+      <li class="nav-item"> <a class="nav-link" href="{{ page.permalink }}">{{ page.title }}</a></li>
+    {% endfor %}
+
+
+{% endblock sidenav%}
 {% block content %}
     {% autoescape off %}
 {{ content }}
     {% endautoescape %}
-{% endblock %}
+    <p>
+    Page last update: {{ last_updated|date:"D d F Y" }}
+    </p>
+{% endblock content%}
