--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>
+        {% block title %}
+        United Document
+        {% endblock %}
+    </title>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
 
 </head>
@@ -20,12 +24,15 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
+            {% block sidenav %}
+
+        <li class="nav-item"> <a class="nav-link" href="#">Link</a></li>
+            {% endblock sidenav%}
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
