--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
         {% endblock %}
     </title>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css">
 
 </head>
 <body>
@@ -41,9 +42,10 @@
             <li><a class="dropdown-item" href="#">Action</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
+                  <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
