--- a/pages/templates/pages/contact.html
+++ b/pages/templates/pages/contact.html
@@ -2,6 +2,14 @@
 {% block title %}
 Contact US
 {% endblock title %}
+{% block sidenav %}
+
+    {% for page in page_list %}
+      <li class="nav-item"> <a class="nav-link" href="{{ page.permalink }}">{{ page.title }}</a></li>
+    {% endfor %}
+
+
+{% endblock sidenav%}
 {% block content %}
 <h1>Contact US</h1>
 
