--- a/quotes/templates/quotes/quote.html
+++ b/quotes/templates/quotes/quote.html
@@ -1,33 +1,43 @@
-{% extends 'base.html' %}
-
-{% block title %}
-Quote Request
-{% endblock title %}
-
+{% extends "base.html" %}
+{% block title %}Quote Request{% endblock title %}
 {% block sidenav %}
     {% for page in page_list %}
-       <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{{ page.permalink }}">{{ page.title }}</a>
-        </li>
+        <li class="nav-item"><a href="/{{ page.permalink }}" class="nav-link">{{ page.title }}</a></li>
     {% endfor %}
-{% endblock sidenav%}
-
+{% endblock sidenav %}
 {% block content %}
-<h1>Quote request</h1>
+    <h1>Quote Request</h1>
+
     {% if submitted %}
-        <p class="alert-success">
-        You quotes was submitted successfully. Thank You.
+
+        <p class="success">
+
+            Your quote was submitted successfully. Thank
+            you.
+
         </p>
+
     {% else %}
-        <form action="" enctype="multipart/form-data" novalidate>
-        <table>
-            {{ form.as_table }}
-            <tr>
-                <td></td>
-                <td><input type="submit" value="Submit"></td>
-            </tr>
-        </table>
-        {% csrf_token %}
+
+        <form action="" enctype="multipart/form-data"
+              method="post" novalidate>
+
+            <table>
+
+                {{ form.as_table }}
+
+                <tr>
+
+                    <td>&nbsp;</td>
+
+                    <td><input type="submit" value="Submit"></td>
+
+                </tr>
+
+            </table>
+
+            {% csrf_token %}
+
         </form>
     {% endif %}
 {% endblock content %}
