--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,8 +1,9 @@
 
-ul.errorlist li{
+ul.errorlist li {
     margin: 0;
     padding: 0;
 }
+
 .errorlist li {
     border: 1px solid red;
     color: red;
@@ -14,8 +15,38 @@ ul.errorlist li{
     text-align: center;
     border-radius: 3px;
 }
+
 input, textarea {
 }
+
 .required label:after {
     content: "*";
+}
+
+.quotehdr th {
+    background-color: #4c4c4c;
+    color: white;
+    text-align: center;
+    padding: 8px 5px;
+    border: none;
+}
+
+.quoterow td {
+    padding: 5px 10px;
+}
+
+.altrow {
+    background-color: #e0e0e0
+}
+
+.quote td:first-child {
+    background-color: #4c4c4c;
+    color: white;
+    text-align: right;
+    padding: 8px 5px;
+    border: none;
+}
+
+.quote td {
+    padding: 5px 10px;
 }
