--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,7 @@
         </li>
                   <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
                   <li class="nav-item"><a class="nav-link" href="/quote/">Get a Quote</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/quote/show">Show Quote</a></li>
 
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
