--- a/quotes/templates/registration/success.html
+++ b/quotes/templates/registration/success.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}
+User registration Success
+{% endblock title %}
 
-</body>
-</html>
+{% block sidenav %}
+        <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+{% endblock sidenav %}
+
+{% block content %}
+<h1>User registration Success</h1>
+    <p>You have successfully registered.</p>
+
+    <p>Click <a href="{% url 'login' %}?next=/">here</a> to log in.</p>
+{% endblock content %}
